# PlannerSlideAssistant

./: assistant.ipynb  pyproject.toml
output/: stackholders_resumo.md  stackholders_slides.md
