[tool.poetry]
name = "SlideAssistant"
version = "0.1.0"
description = "A assistant to make presentations in any topic and area"
authors = ["Lucas Lago <lukemartinslagonit@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
requests = "^2.32.3"
ipykernel = "^6.29.5"
langchain-community = ">=0.2.16,<0.3.0"
crewai = "^0.67.1"
crewai-tools = "^0.12.1"
ollama = "^0.3.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
